homework19/src/network.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr_block
  tags       = merge(local.common_tags, { "Name" = format(local.resourse_name, "main") })

}

resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.subnets_cidr.public_a
  availability_zone       = "${var.aws_region}a"
  map_public_ip_on_launch = true

  tags = merge(local.common_tags, { "Name" = format(local.resourse_name, "public_a") })

}

resource "aws_subnet" "private_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.subnets_cidr.private_b
  availability_zone = "${var.aws_region}b"

  tags = merge(local.common_tags, { "Name" = format(local.resourse_name, "private_b") })

}

resource "aws_internet_gateway" "main_gw" {
  vpc_id = aws_vpc.main.id

  tags = merge(local.common_tags, { "Name" = format(local.resourse_name, "main_gw") })

}

resource "aws_eip" "nat" {
  domain     = "vpc"
  depends_on = [aws_internet_gateway.main_gw]
}

resource "aws_nat_gateway" "main_nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_a.id

  tags       = merge(local.common_tags, { "Name" = format(local.resourse_name, "main_nat") })
  depends_on = [aws_internet_gateway.main_gw]
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main_gw.id
  }

  tags = merge(local.common_tags, { "Name" = format(local.resourse_name, "public_rt") })

}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main_nat.id
  }

  tags = merge(local.common_tags, { "Name" = format(local.resourse_name, "private_rt") })

}

resource "aws_route_table_association" "public_a" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_b" {
  subnet_id      = aws_subnet.private_b.id
  route_table_id = aws_route_table.private.id
}
